--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "vue": "^2.5.11",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   },
