--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ cache: npm
 
 script: npm run build
 
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  local_dir: dist
-  on:
-    branch: master
+# deploy:
+#   provider: pages
+#   skip_cleanup: true
+#   github_token: $GITHUB_TOKEN
+#   local_dir: dist
+#   on:
+#     branch: master
