--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.3",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "react-router-dom": "^5.1.2",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
