--- a/package.json
+++ b/package.json
@@ -40,8 +40,13 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
     "awesome-typescript-loader": "^5.2.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
     "react-router-dom": "^5.1.2",
+    "style-loader": "^1.0.2",
+    "typings-for-css-modules-loader": "^1.7.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
