--- a/package.json
+++ b/package.json
@@ -40,9 +40,13 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
     "awesome-typescript-loader": "^5.2.1",
+    "bootstrap": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "install": "^0.13.0",
+    "npm": "^6.13.4",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-router-dom": "^5.1.2",
     "style-loader": "^1.0.2",
     "typings-for-css-modules-loader": "^1.7.0",
