--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.13.0",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
     "npm": "^6.13.4",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-router-dom": "^5.1.2",
