--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "npm": "^6.13.4",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.4.1",
     "style-loader": "^1.0.2",
     "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
