--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mobx-react": "^6.1.4",
     "npm": "^6.13.4",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-media": "^1.10.0",
     "react-router-dom": "^5.1.2",
     "react-toastify": "^5.4.1",
     "style-loader": "^1.0.2",
