--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.3.0",
     "sass-loader": "^8.0.2",
     "typescript": "^3.7.5"
@@ -45,6 +46,7 @@
     "bootstrap": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.13.0",
     "mobx": "^5.15.2",
