--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.13.0",
     "mobx": "^5.15.2",
