--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^3.9.0",
     "react-scripts": "3.3.0",
     "sass-loader": "^8.0.2",
+    "styled-components": "^5.0.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
